--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "list-app",
+  "homepage": "https://rohit123-start.github.io/list-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
